# 24.1

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner.py  0004_lesson_owner.py  0005_subscription.py  0006_remove_subscription_users_subscription_user_and_more.py
users/: models.py  permissions.py  serializers.py  service.py  urls.py  views.py
users/management/commands/: csu.py  load_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_amount_alter_payment_payment_date_and_more.py  0004_alter_payment_user.py  0005_alter_user_avatar.py  0006_alter_payment_options_payment_link_and_more.py  0007_alter_payment_payment_method.py  0008_alter_payment_payment_method.py
